# q1_project

./: .pdm-python  README.md  pyproject.toml  pytest.ini
data/: diseases.csv  drug_disease_treatments.csv  drug_protein_targets.csv  drugs.csv  genes.csv  protein_disease_associations.csv  proteins.csv
docs/: foundations-and-background.md  getting-started.md  reference.md  technical-guide.md
langgraph-studio/: langgraph.json  langgraph_studio.py
scripts/: load_data.py  quickstart.py
src/: __init__.py
src/agents/: __init__.py  graph_interface.py  workflow_agent.py  workflow_history.py
src/web/: __init__.py  app.py
tests/: __init__.py  test_app.py  test_graph_interface.py  test_workflow_agent.py
